# data-forge-rs

./: .history  Cargo.toml  README.md  cliff.toml
examples/: arrow_serde.rs  exp_parquet.rs  ndjson.rs
src/: lib.rs  main.rs
src/backend/: data_fusion.rs  mod.rs
src/backend/df/: describe.rs  df_describe.rs  mod.rs
src/cli/: connect.rs  describe.rs  head.rs  list.rs  mod.rs  schema.rs  sql.rs
